[package]
name = "league_think"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = "2.6.1"
tokio = { version = "1", default-features = false, features = [ "rt", "rt-multi-thread", "time", "macros", "parking_lot" ] }
serde_json = "1.0.79"
chrono = "0.4.19"
clap = { version = "3", features = [ "derive" ] }
edit-distance = "2.1.0"